style.css
body {
  margin: 0;
  font-family: 'Kumbh Sans', sans-serif;
  background: linear-gradient(
    0deg,
    rgba(101, 101, 231, 1) 0%,
    rgba(175, 103, 233, 1) 100%
  );
  background-repeat: no-repeat;
  height: 100vh;
  color: hsl(237, 12%, 33%);
}

.col-6 {
  padding: 0;
}

h2 {
  font-weight: 700;
  margin: 0;
  padding-bottom: 30px;
}

.container {
  margin: 100px auto;
  width: 940px;
}

.app {
  background: #fff;
  border-radius: 10px;
}

.accordion {
  max-width: 400px;
  padding: 50px;
}

.accordion .accordion-item {
  position: relative;
}

.accordion .label {
  opacity: 0.9;
  position: relative;
  padding: 10px 0;
  cursor: pointer;
}

.accordion .label:hover {
  color: hsl(14, 88%, 65%);
}

.accordion .label::before {
  content: url(/images/icon-arrow-down.svg);
  position: absolute;
  top: 50%;
  right: -5px;
  transform: translateY(-50%);
}

.accordion .content {
  color: hsl(240, 6%, 50%);
  font-size: 12px;
  position: relative;
  height: 0;
  overflow: hidden;
  transition: all 150ms ease-in-out;
}

.accordion .accordion-item.active .content {
  height: auto;
  padding-bottom: 10px;
}

.accordion .accordion-item.active .label::before {
  content: url(/images/icon-arrow-down.svg);
  position: absolute;
  top: 20%;
  right: -5px;
  transform: translateY(-50%);
  transform: rotate(180deg);
}

.accordion .accordion-item.active .label {
  font-weight: 700;
  color: black;
}

.accordion-item {
  border: none;
  border-bottom: 1px solid hsl(240, 5%, 91%);
}

.images {
  position: relative;
  max-width: 400px;
}

.img-box {
  position: absolute;
  display: flex;
  transform: translateY(80%);
  left: -80px;
  z-index: 2;
  max-width: 50%;
}

.img-woman {
  position: absolute;
  display: flex;
  width: 100%;
  transform: translateY(15%);
  left: -50px;
  z-index: 1;
}

.img-lines {
  position: absolute;
  display: flex;
  transform: translateY(20%);
  left: -476px;
  width: 211%;
  z-index: 0;
  top: -401px;
}

/* .overflow-imgs {
  overflow: hidden;
} */

.attribution {
  font-size: 11px;
  text-align: center;
}
.attribution a {
  color: hsl(228, 45%, 44%);
}

